# sandbox

./: GenRM.ipynb  Makefile  README.md
1_projects/workflows/: .gitignore  hello.py  pyproject.toml
1_projects/workflows/.metaflow/MNISTFlow/: latest_run
1_projects/workflows/.metaflow/MNISTFlow/1729373526221938/_meta/: _self.json
1_projects/workflows/.metaflow/MNISTFlow/1729373526221938/_parameters/0/: 0.attempt.json  0.data.json
1_projects/workflows/.metaflow/MNISTFlow/1729373526221938/_parameters/_meta/: _self.json
1_projects/workflows/.metaflow/MNISTFlow/1729373526221938/start/1/: 0.attempt.json  0.data.json
1_projects/workflows/.metaflow/MNISTFlow/1729373526221938/start/_meta/: _self.json
1_projects/workflows/.metaflow/MNISTFlow/1729373526221938/train/2/: 0.attempt.json  0.data.json
1_projects/workflows/.metaflow/MNISTFlow/1729373526221938/train/_meta/: _self.json
1_projects/workflows/.metaflow/MNISTFlow/1729373899528039/_meta/: _self.json
1_projects/workflows/.metaflow/MNISTFlow/1729373899528039/_parameters/0/: 0.data.json  (+1 more)
1_projects/workflows/.metaflow/MNISTFlow/1729374038518527/_meta/: _self.json
1_projects/workflows/.metaflow/MNISTFlow/1729374190675180/_meta/: _self.json
1_projects/workflows/.metaflow/MNISTFlow/1729374448990209/_meta/: _self.json
1_projects/workflows/.metaflow/MNISTFlow/1729374871620704/_meta/: _self.json
1_projects/workflows/.metaflow/MNISTFlow/1729375107889400/_meta/: _self.json
1_projects/workflows/.metaflow/MNISTFlow/1729375298960691/_meta/: _self.json
1_projects/workflows/.metaflow/MNISTFlow/_meta/: _self.json
(+531 files in other folders)
